<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_dynamic_msgs</name>
  <version>0.0.1</version>
  <description>Msg and srv for nav2_dynamic_obstacle</description>
  <maintainer email="stevenmacenski@gmail.com">Steven Macenski</maintainer>
  <maintainer email="csj15thu@gmail.com">Shengjian Chen</maintainer>
  <license>Apache-2.0</license>

  <author email="matteo.derose@studenti.polito.it">Matteo De Rose</author>
  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>
  <author email="franz.albers@tu-dortmund.de">Franz Albers</author>
  <author email="otniel.rinaldo@tu-dortmund.de">Otniel Rinaldo</author> 

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>unique_identifier_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
