<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_gradient_costmap_plugin</name>
  <version>1.0.0</version>
  <description>Run-time plugin for Costmap2D gradient layer</description>
  <maintainer email="alexey.merzlyakov@samsung.com">Alexey Merzlyakov</maintainer>
  <license>BSD-3-Clause</license>

  <author email="matteo.derose@studenti.polito.it">Matteo De Rose</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_dynamic_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>angles</depend>

  <export>
    <nav2_costmap_2d plugin="${prefix}/gradient_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>