<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_costmap_to_dynamic_obstacles</name>
  <version>0.0.1</version>
  <description>A ros2 package to detect dynamic obstacles from nav2_costmap_2d cells</description>
  <maintainer email="stevenmacenski@gmail.com">Steven Macenski</maintainer>
  <license>BSD</license>

  <author email="matteo.derose@studenti.polito.it">Matteo De Rose</author>
  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>
  <author email="franz.albers@tu-dortmund.de">Franz Albers</author>
  <author email="otniel.rinaldo@tu-dortmund.de">Otniel Rinaldo</author> 

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_dynamic_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>OpenCV</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
